--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "ticketblaster",
-  "version": "1.0.0",
-  "description": "Project App for Semos Academy",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "express-http-proxy": "^2.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.1",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "concurrently": "^9.0.1"
-  }
+	"name": "ticketblaster",
+	"version": "1.0.0",
+	"description": "Project App for Semos Academy",
+	"main": "server.js",
+	"scripts": {
+		"start": "concurrently \"nodemon ./services/auth/index.js\" \"nodemon ./services/users/index.js\""
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.1",
+		"express-http-proxy": "^2.1.1",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.6.1",
+		"path": "^0.12.7"
+	},
+	"devDependencies": {
+		"concurrently": "^9.1.0",
+		"nodemon": "^3.1.7"
+	}
 }
