--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Project App for Semos Academy",
 	"main": "server.js",
 	"scripts": {
-		"start": "concurrently \"nodemon ./services/auth/index.js\" \"nodemon ./services/users/index.js\" \"nodemon ./services/events/index.js\""
+		"start": "concurrently \"nodemon ./services/auth/index.js\" \"nodemon ./services/users/index.js\" \"nodemon ./services/events/index.js\" \"nodemon ./services/upload/index.js\""
 	},
 	"author": "",
 	"license": "ISC",
@@ -18,7 +18,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.6.1",
 		"multer": "^1.4.5-lts.1",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"uuid": "^11.0.3"
 	},
 	"devDependencies": {
 		"concurrently": "^9.1.0",
