--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"axios": "^1.7.7",
+		"classnames": "^2.5.1",
 		"jwt-decode": "^4.0.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
